# ptouch-print

./: .gitignore  CMakeLists.txt  README  ptouch-print.1
cmake/: FindGD.cmake  gitversion.cmake  version.cmake
include/: ptouch.h
po/: Makevars  ptouch.pot
src/: libptouch.c  ptouch-print.c
udev/: 90-usb-ptouch-permissions.rules
